Fix navigation: remove redundant options, move Communication to Coach Resources, fix grid layout issues

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1200,6 +1200,22 @@ table {
   > * > *:last-child {
     margin-bottom: 0;
   }
+  
+  // Fix for broken grid layout
+  > * {
+    min-width: 0;
+    width: 100%;
+  }
+  
+  // Fix for images in grid cells
+  .featured-image {
+    max-width: 100%;
+    
+    img {
+      max-width: 100%;
+      height: auto;
+    }
+  }
 }
 
 // Three-column layout
@@ -1225,7 +1241,8 @@ table {
   
   // All grids have equal height columns by default
   > * {
-    height: 100%;
+    min-width: 0;
+    width: 100%;
   }
   
   // Ensure all content in grid cells has proper spacing
@@ -1235,6 +1252,12 @@ table {
   
   > * > *:last-child {
     margin-bottom: 0;
+  }
+  
+  // Fix for images in grid cells
+  img {
+    max-width: 100%;
+    height: auto;
   }
 }
 
